update vscode extensions

--- a/.ssh/config
+++ b/.ssh/config
@@ -41,6 +41,8 @@ Host tukey
 
     User naglert
 
-    ProxyCommand ssh -A -X -q naglert@sshgw.leidenuniv.nl netcat -w 3 tukey.math.leidenuniv.nl 22
+    Hostname tukey.math.leidenuniv.nl
+
+    ProxyCommand ssh -X -A sshgw -p 22 -q -W %h:%p
 
     ForwardAgent yes
