--- a/.gitconfig
+++ b/.gitconfig
@@ -5,3 +5,5 @@
 [url "ssh://git@github.com/"]                                                   
     insteadOf = https://github.com/ 
 
+[credential]
+	helper = cache
