--- a/.ssh/config
+++ b/.ssh/config
@@ -3,46 +3,31 @@ Host sshgw
 
     User naglert
 
-    Hostname sshgw.leidenuniv.nl
-
-Host PUBMI
-
-    User naglert
-
-    ProxyCommand ssh -A -X -q naglert@sshgw.leidenuniv.nl netcat -w 3 pub.math.leidenuniv.nl 22
-
-    ForwardAgent yes
-
-Host WWWMI
-
-    User beheer-www
-
-    ProxyCommand ssh -A -X -q naglert@sshgw.leidenuniv.nl netcat -w 3 vvv.math.leidenuniv.nl 22
-
-    ForwardAgent yes
-
-Host CAMPMI
-
-    User naglert
-
-    ProxyCommand ssh -A -X -q naglert@sshgw.leidenuniv.nl netcat -w 3 ssh-math.campus.leidenuniv.nl 22
-
-    ForwardAgent yes
-
-Host Capella
-
-    User naglert
-
-    ProxyCommand ssh -A -X -q naglert@sshgw.leidenuniv.nl netcat -w 3 capella.math.leidenuniv.nl 22
-
-    ForwardAgent yes
+    HostName sshgw.leidenuniv.nl
 
 Host tukey
 
     User naglert
 
-    Hostname tukey.math.leidenuniv.nl
+    HostName tukey.math.leidenuniv.nl
 
     ProxyCommand ssh -X -A sshgw -p 22 -q -W %h:%p
 
     ForwardAgent yes
+
+Host canis-majoris.socialwork.columbia.edu
+    HostName canis-majoris.socialwork.columbia.edu
+    User guest
+    ForwardAgent yes
+
+Host ec2-3-140-200-123.us-east-2.compute.amazonaws.com
+    HostName ec2-3-140-200-123.us-east-2.compute.amazonaws.com
+    User ubuntu
+    ForwardAgent yes
+
+
+Host zeus
+
+    User root
+
+    HostName 89.187.161.131
